[tool.poetry]
name = "flask-experiment"
version = "0.1.0"
description = "I'm gonna do some flask stuff"
authors = ["Taylor <taylor.falk3@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^3.0.2"
Jinja2 = "^3.1.3"

[tool.poetry.group.dev.dependencies]
icecream = "^2.1.3"
pytest = "^8.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
